--- a/_posts/43234-1-2-hmmm.md
+++ b/_posts/43234-1-2-hmmm.md
@@ -21,7 +21,7 @@ And very common applications always have very cool, and established, models. The
 
 * ![](../assets/imgs/1.png?raw=true), we define our hidden state at time ![](../assets/imgs/t.png?raw=true) as a random variable; the process unfolds as an infinite sequence ![](../assets/imgs/2.png?raw=true) of such variables 
  
-* Markov rule: ![](../assets/imgs/3.png?raw=true). This is the so called *memorylessness*, we just look at the immediately preceding state to pontificate on the one to come; more precisely the order of the process is how many previous states you take into account
+* Markov rule: ![](../assets/imgs/3.png). This is the so called *memorylessness*, we just look at the immediately preceding state to pontificate on the one to come; more precisely the order of the process is how many previous states you take into account
 
 * Evolution: at every step ![](../assets/imgs/t.png?raw=true) for every pair of states ![](../assets/imgs/ij.png?raw=true), in a possibly continuous space, we pass from state ![](../assets/imgs/i.png?raw=true) to state ![](../assets/imgs/j.png?raw=true) with probability ![](../assets/imgs/4.png?raw=true)
 
