--- a/_posts/43234-1-2-hmmm.md
+++ b/_posts/43234-1-2-hmmm.md
@@ -19,7 +19,7 @@ It is a rather common real-life situation one where some piece of information ca
 And very common applications always have very cool, and established, models. The model of reference here is that of [hidden Markov models](https://en.wikipedia.org/wiki/Hidden_Markov_model) and you
  can find of course pages galore on the topic. In a nutshell:
 
-* ![](../assets/imgs/1.png?raw=true), we define our hidden state at time ![](../assets/imgs/t.png?raw=true) as a random variable; the process unfolds as an infinite sequence ![](../assets/imgs/2.png?raw=true) of such variables 
+* ![]({{ site.url }}/assets/imgs/1.png?raw=true), we define our hidden state at time ![](../assets/imgs/t.png?raw=true) as a random variable; the process unfolds as an infinite sequence ![](../assets/imgs/2.png?raw=true) of such variables 
  
 * Markov rule: ![](../assets/imgs/3.png). This is the so called *memorylessness*, we just look at the immediately preceding state to pontificate on the one to come; more precisely the order of the process is how many previous states you take into account
 
