--- a/_posts/2019-06-14-sparkube.md
+++ b/_posts/2019-06-14-sparkube.md
@@ -26,11 +26,11 @@ To get started, create an AKS cluster in your subscription of choice, but be car
 * since AKS billing can become quite relevant, a good idea to tag the resource
 
 You can quickly setup the cluster through the wizard:
-![Creation wizard]({{ site.url }}assets/imgs/AKS_1.png?raw=true)
-![Scale]({{ site.url }}assets/imgs/AKS_2.png?raw=true)
-![RBAC]({{ site.url }}assets/imgs/AKS_3.png?raw=true)
-![Network]({{ site.url }}assets/imgs/AKS_4.png?raw=true)
-![Tags]({{ site.url }}assets/imgs/AKS_5.png?raw=true)
+![Creation wizard]({{ site.url }}assets/imgs/AKS_1.PNG?raw=true)
+![Scale]({{ site.url }}assets/imgs/AKS_2.PNG?raw=true)
+![RBAC]({{ site.url }}assets/imgs/AKS_3.PNG?raw=true)
+![Network]({{ site.url }}assets/imgs/AKS_4.PNG?raw=true)
+![Tags]({{ site.url }}assets/imgs/AKS_5.PNG?raw=true)
 
 The infra AD app is the one the setup will use to talk to the Azure API to create the needed cluster resources, VMs for example: the k8s node will be actual virtual machines of the specified size.
 
@@ -48,7 +48,7 @@ Just like any other Azure resource, we can manage its deployment with the Azure 
 
 When setting up in RBAC mode as we do, it is very important to configure the accesses right from an AD perspective. Next to the usual __Contributor__ and __Owner__ roles, AKS has a specific __Azure Kubernetes Service Cluster User Role__: AD users and groups needing working access to the cluster need to get this role assigned; replace __User__ with __Admin__ and find the administrative role. While a reader role is also handy, contributor and higher roles shall be given only to those in charge of managing the solution, e.g. an infrastructure team.
 
-![Access Control (IAM)]({{ site.url }}assets/imgs/AKS_6.pmg?raw=true)
+![Access Control (IAM)]({{ site.url }}assets/imgs/AKS_6.PNG?raw=true)
 
 Having the admin role assigned means that the user will be able to connect to the cluster with k8s admin privileges, more on this below.
 
