--- a/_posts/2019-06-14-sparkube.md
+++ b/_posts/2019-06-14-sparkube.md
@@ -26,10 +26,15 @@ To get started, create an AKS cluster in your subscription of choice, but be car
 * since AKS billing can become quite relevant, a good idea to tag the resource
 
 You can quickly setup the cluster through the wizard:
-![Creation wizard]({{ site.url }}assets/imgs/AKS_1.PNG?raw=true)
+
+![Creation wizard]({{ site.url }}assets/imgs/AKS_1.PNG =529x423?raw=true)
+
 ![Scale]({{ site.url }}assets/imgs/AKS_2.PNG?raw=true)
+
 ![RBAC]({{ site.url }}assets/imgs/AKS_3.PNG?raw=true)
+
 ![Network]({{ site.url }}assets/imgs/AKS_4.PNG?raw=true)
+
 ![Tags]({{ site.url }}assets/imgs/AKS_5.PNG?raw=true)
 
 The infra AD app is the one the setup will use to talk to the Azure API to create the needed cluster resources, VMs for example: the k8s node will be actual virtual machines of the specified size.
