--- a/_posts/2019-06-14-sparkube.md
+++ b/_posts/2019-06-14-sparkube.md
@@ -27,7 +27,8 @@ To get started, create an AKS cluster in your subscription of choice, but be car
 
 You can quickly setup the cluster through the wizard:
 
-![Creation wizard]({{ site.url }}assets/imgs/AKS_1.PNG =529x423?raw=true)
+![Creation wizard]({{ site.url }}assets/imgs/AKS_1.PNG?raw=true)
+<img src="{{ site.url }}assets/imgs/AKS_1.PNG" alt="drawing" width="200"/>
 
 ![Scale]({{ site.url }}assets/imgs/AKS_2.PNG?raw=true)
 
