--- a/_posts/2019-06-14-sparkube.md
+++ b/_posts/2019-06-14-sparkube.md
@@ -27,8 +27,10 @@ To get started, create an AKS cluster in your subscription of choice, but be car
 
 You can quickly setup the cluster through the wizard:
 
-![Creation wizard]({{ site.url }}assets/imgs/AKS_1.PNG?raw=true)
-<img src="{{ site.url }}assets/imgs/AKS_1.PNG" alt="drawing" width="200"/>
+<figure>
+    <img src="{{ site.url }}assets/imgs/AKS_1.PNG" alt="missing" width="529"/>
+    <figcaption>Creation wizard</figcaption>
+</figure>
 
 ![Scale]({{ site.url }}assets/imgs/AKS_2.PNG?raw=true)
 
