--- a/_posts/2019-06-14-sparkube.md
+++ b/_posts/2019-06-14-sparkube.md
@@ -32,13 +32,26 @@ You can quickly setup the cluster through the wizard:
     <figcaption>Creation wizard</figcaption>
 </figure>
 
-![Scale]({{ site.url }}assets/imgs/AKS_2.PNG?raw=true)
+<figure>
+    <img src="{{ site.url }}assets/imgs/AKS_2.PNG" alt="missing" width="794"/>
+    <figcaption>Scale</figcaption>
+</figure>
 
-![RBAC]({{ site.url }}assets/imgs/AKS_3.PNG?raw=true)
+<figure>
+    <img src="{{ site.url }}assets/imgs/AKS_3.PNG" alt="missing" width="794"/>
+    <figcaption>RBAC</figcaption>
+</figure>
 
-![Network]({{ site.url }}assets/imgs/AKS_4.PNG?raw=true)
+<figure>
+    <img src="{{ site.url }}assets/imgs/AKS_4.PNG" alt="missing" width="794"/>
+    <figcaption>Network</figcaption>
+</figure>
 
-![Tags]({{ site.url }}assets/imgs/AKS_5.PNG?raw=true)
+<figure>
+    <img src="{{ site.url }}assets/imgs/AKS_5.PNG" alt="missing" width="794"/>
+    <figcaption>Tags</figcaption>
+</figure>
+
 
 The infra AD app is the one the setup will use to talk to the Azure API to create the needed cluster resources, VMs for example: the k8s node will be actual virtual machines of the specified size.
 
