--- a/_posts/2019-06-14-sparkube.md
+++ b/_posts/2019-06-14-sparkube.md
@@ -52,7 +52,6 @@ You can quickly setup the cluster through the wizard:
     <figcaption>Tags</figcaption>
 </figure>
 
-
 The infra AD app is the one the setup will use to talk to the Azure API to create the needed cluster resources, VMs for example: the k8s node will be actual virtual machines of the specified size.
 
 Custom network control is always a good idea in Azure, with any kind of managed resource, think about an HDInsight cluster or a Databricks workbench - you may want to connect other resource directly, or have fine-grained control on the firewalling, all of this is not possible if the network is hidden so internally managed.
@@ -69,7 +68,10 @@ Just like any other Azure resource, we can manage its deployment with the Azure 
 
 When setting up in RBAC mode as we do, it is very important to configure the accesses right from an AD perspective. Next to the usual __Contributor__ and __Owner__ roles, AKS has a specific __Azure Kubernetes Service Cluster User Role__: AD users and groups needing working access to the cluster need to get this role assigned; replace __User__ with __Admin__ and find the administrative role. While a reader role is also handy, contributor and higher roles shall be given only to those in charge of managing the solution, e.g. an infrastructure team.
 
-![Access Control (IAM)]({{ site.url }}assets/imgs/AKS_6.PNG?raw=true)
+<figure>
+    <img src="{{ site.url }}assets/imgs/AKS_6.PNG" alt="missing" width="794"/>
+    <figcaption>Access Control (IAM)</figcaption>
+</figure>
 
 Having the admin role assigned means that the user will be able to connect to the cluster with k8s admin privileges, more on this below.
 
