--- a/_posts/2019-06-14-sparkube.md
+++ b/_posts/2019-06-14-sparkube.md
@@ -114,9 +114,10 @@ To get a cluster connection give the following:
 * `az login`
 * `az account set --subscription "$SUBSCRIPTION"`
 * `az aks get-credentials -g $AKS_RESOURCE_GROUP -n $AKS_CLUSTER_NAME $ADMIN`
+
 after initializing the needed environment variables; optionally set `ADMIN=--admin`.
 
-After a successful authentication the `~/.kube/config` file will appear, containing the OAuth access token among others. Extract it with the following:
+On a successful authentication the `~/.kube/config` file will appear, containing the OAuth access token among others. Extract it with the following:
 ```bash
 awk '/access-token:/ {print $2}' ~/.kube/config | tr -d "\r" | tr -d "\n" > ~/.kube/oauthToken
 TOKEN=$(cat ~/.kube/oauthToken)
@@ -133,7 +134,7 @@ To properly setup our personal Kubernetes environment in RBAC mode for Spark, we
 You can read more about this [here](https://kubernetes.io/docs/reference/access-authn-authz/rbac/) and in the Spark documentation. For convenience here is a couple YAML files:
 * [Role]({{ site.url }}assets/attachments/role.yml.template)
 * [Role binding]({{ site.url }}assets/attachments/role-binding.yml.template)
-* [Service account]({{ site.url }}assets/attachments/service-account.yml.templates)
+* [Service account]({{ site.url }}assets/attachments/service-account.yml.template)
 
 To `kubectl apply` those you will need to get a cluster shell as admin with the `--admin` switch above. Notice that these are templates: you will need to fill in the variables first, such as a username and your user Active Directory ID.
 
@@ -154,7 +155,7 @@ spark.kubernetes.authenticate.driver.serviceAccountName    spark
 ```
 where you will replace `<TOKEN>` with the value of the `$TOKEN` variable above, and `<CLUSTER>` is the `k8s://https://` address of your AKS cluster (copy that from the portal). If you will launch the Spark submit from inside the cluster, say for example on a test environment running inside a pod, you may just use the local reference `k8s://https://kubernetes.default.svc:443`.
 
-. A few comments:
+A few comments:
 
 * the number of instances must be satisfied with your quota if set: if you ask for three executors but only have one pod left for example, that one will go to the driver and your job will keep hanging until you free up other pods, by killing existing jobs for example
 
