--- a/_posts/2019-06-14-sparkube.md
+++ b/_posts/2019-06-14-sparkube.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Spark in Kubernetes mode on an RBAC 
+title: Spark in Kubernetes mode on an RBAC AKS cluster
 ---
 
 {% include google_analytics.html %}
