--- a/_posts/2019-06-14-sparkube.md
+++ b/_posts/2019-06-14-sparkube.md
@@ -54,7 +54,7 @@ You can quickly setup the cluster through the wizard:
 
 The infra AD app is the one the setup will use to talk to the Azure API to create the needed cluster resources, VMs for example: the k8s node will be actual virtual machines of the specified size.
 
-Custom network control is always a good idea in Azure, with any kind of managed resource, think about an HDInsight cluster or a Databricks workbench - you may want to connect other resource directly, or have fine-grained control on the firewalling, all of this is not possible if the network is hidden so internally managed.
+Custom network control is always a good idea in Azure, with any kind of managed resource, think about an HDInsight cluster or a Databricks workbench - you may want to connect other resources directly, or have fine-grained control on the firewalling, all of this is not possible if the network is hidden, thus internally managed.
 
 About tagging, this is also a good practice for any resource, especially if a subscription is in use by multiple teams or groups and you want to specify the cost centers with detail.
 
@@ -79,11 +79,11 @@ Having the admin role assigned means that the user will be able to connect to th
 
 Just like YARN mode uses YARN containers to provision the driver and executors of a Spark program, in Kubernetes mode pods will be used. The point is that in an RBAC setup Spark performs authenticated resource requests to the k8s API server: you are personally asking for two pods for your driver and executor. Anything applying to an RBACed solution also applies to our cluster, with two specific points:
 
-* we need to configure properly the agent which is performing API requests on our behalf
+* we need to properly configure the agent which is performing API requests on our behalf
 
-* by introducing RBAC, specifiy per-user configuration can be implemented, for example resource quotas - you may ask at most say five pods, and consume no more than 250 MB memory and 1 CPU.
+* by introducing RBAC, specific per-user configuration can be implemented, for example resource quotas - you may ask at most say five pods, and consume no more than 250 MB memory and 1 CPU.
 
-Spark program becomes then specified as one container image, typically Docker, to be spawned. In normal scenario's you will not need a specific image for executors, the same image as for the driver will be used.
+A Spark program becomes then specified as one container image, typically Docker, tobe spawned. In normal scenario's you will not need a specific image for executors, the same image as for the driver will be used.
 
 ### A two-step authentication
 
@@ -91,14 +91,14 @@ Let us assume we will be firing up our jobs with `spark-submit`. We will need to
 1. from the terminal, asking to spawn a pod for the driver
 2. from the driver, asking pods for executors
 
-See [here](https://spark.apache.org/docs/2.4.0/running-on-kubernetes.html#configuration) for all the relevant properties. The `spark.kubernetes.authenticate` props are those we want to look at. As you see we have the `submission` and `driver` sections, and multiple ways to authenticate, OAuth, certificate and [service accounts](https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/) . To complicate further, values may be passed as argumented or mounted as k8s secrets.
+See [here](https://spark.apache.org/docs/2.4.0/running-on-kubernetes.html#configuration) for all the relevant properties. The `spark.kubernetes.authenticate` props are those we want to look at. As you see we have the `submission` and `driver` sections, and multiple ways to authenticate, OAuth, certificate and [service accounts](https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/) . To complicate further, values may be passed as arguments or mounted as k8s secrets.
 
 After some pondering and tests, we will go for the following:
 1. providing the OAuth token to the Spark submitter, `spark.kubernetes.authenticate.submission.oauthToken`
 2. setting up a service account for the driver, `spark.kubernetes.authenticate.driver.serviceAccountName`
 
 At least now there are two mayor limitations in the Spark k8s mode for AKS:
-* we cannot use a service account for submission too (this might have a specific reason but it is unclear to me)
+* we cannot use a service account for submission too (a service account is not a k8s service actually and it may not be accessed remotely))
 * certificate authentication is an option for admin mode only: when merging the configuration in non-admin, the certificate information is not sent back to the client (see below)
 
 ### Getting the keys right
@@ -163,13 +163,13 @@ A few comments:
 
 * the Python version should match the version of your driver image program; for PySpark on k8s, version 3 only should be used
 
-* tokens will expire after a while, with the Azure AD default policies it is one hour, but this file needs to be kept secret at all times, keep in your home but do not share it
+* tokens will expire after a while, with the Azure AD default policies it is one hour, but this file needs to be kept secret at all times, keep it in your home but do not share it
 
 * token expiration also means that you will have to update the token in the configuration every hour: to get a new token just repeat the credentials download again, or perform any `kubectl` command
 
 ## Test program
 
-We will use Docker of course, and Before we start, make sure you have a Docker repo up and running. A very easy option is just to create an [Azure Container Registry](https://azure.microsoft.com/en-in/services/container-registry/). in the same resource group as the cluster.
+We will use Docker of course, and before we start, make sure you have a Docker repo up and running. A very easy option is just to create an [Azure Container Registry](https://azure.microsoft.com/en-in/services/container-registry/) in the same resource group as the cluster.
 
 Let us try out a very simple PySpark program just to make sure everything is fine. Find an example program [here]({{ site.url }}assets/attachments/spark-example.zip).
 
@@ -179,8 +179,8 @@ As you can see this is based on a `spark-py:v2.4.0` image: how do we make that?
 
 How to build the PySpark `spark-py` container image:
 
-* download Spark source code from the official website, e.g. `spark-2.4.0.tgz`
-* unzip and give:
+* download the Spark source code from the official website, e.g. `spark-2.4.0.tgz`
+* unzip and give (needs `mvn`):
   * `./build/mvn -Pkubernetes -DskipTests -Phadoop-2.8 -Dhadoop.version=2.8.1 clean package`
   * `bin/docker-image-tool.sh -r aksblog.azurecr.io/aksblog -t v2.4.0 build`
   * `bin/docker-image-tool.sh -r aksblog.azurecr.io/aksblog -t v2.4.0 push`
@@ -195,7 +195,7 @@ You should have pushed both the base and test PySpark images to the repository n
 ```sh
 spark-submit --conf spark.kubernetes.namespace=$NAMESPACE --conf spark.kubernetes.container.image=aksblog.azurecr.io/aksblog/spark-example:v2.4.0 --properties-file spark.properties --name spark-example /app/bin/run.py
 ```
-where `$NAMESPACE` points to your personal k8s namespace created in the YAMLs above, the image is the test Spark program and the Python program is an actual path in the image itself.
+where `$NAMESPACE` points to your personal k8s namespace created in the YAMLs above, the image is the test Spark program and the Python program is an actual path in the image itself. It goes without saying that you should have Spark 2.4.0 properly installed locally.
 
 Follow through the logs now; once the job successfully starts, a `kubectl get pods` in your namespace will show one driver pod and a number of executor pods.
 
